feature: add paging and sorting for get all tasks